<resources>
    <string name="app_name">Maps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_api_key">AIzaSyCP0pDe-la5HbptSNCn7M7v9zUC8Jcdliw</string>


    <!--string menu-->
    <string name="show_markers_maps_menu">Отображать маркеры</string>
    <string name="modern_maps_menu">Современные карты</string>
    <string name="vintage_maps_menu">Старинные карты</string>
    <string name="markers_maps_menu">Маркеры</string>
    <string name="settings_maps_menu">Настройки</string>
    <string name="marker">Маркер</string>
    <string name="number">№</string>
    <string name="number_marker">Номер маркера</string>
    <string name="title">Название</string>
    <string name="description">Описание</string>
    <string name="save">Сохранить</string>
    <string name="markers">Маркеры</string>
    <string name="modern_maps">Современные\nкарты</string>
    <string name="empty_marker_list">Список маркеров пуст.\nМаркер можно добавить\nдолгим нажатием на карту.</string>

</resources>