<?xml version="1.0" encoding="utf-8"?>

<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:behavior_peekHeight="60dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <ScrollView
        android:id="@+id/scroll_view_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:isScrollContainer="false"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constran_layout_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewRectangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rectangle_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewMarker"
                style="@style/TextAppearance.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/marker"
                app:layout_constraintEnd_toEndOf="@+id/imageViewRectangle"
                app:layout_constraintStart_toStartOf="@+id/imageViewRectangle"
                app:layout_constraintTop_toBottomOf="@+id/imageViewRectangle" />

            <ImageView
                android:id="@+id/imageViewLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/line"
                app:layout_constraintTop_toBottomOf="@+id/textViewMarker"
                tools:layout_editor_absoluteX="-3dp" />

            <TextView
                android:id="@+id/idTextNumberMarker"
                style="@style/TextAppearance.Body2Menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/ellipse"
                android:gravity="center"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewLine" />

            <TextView
                android:id="@+id/textViewNumberMarker"
                style="@style/TextAppearance.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/number_marker"
                app:layout_constraintBottom_toBottomOf="@+id/idTextNumberMarker"
                app:layout_constraintStart_toEndOf="@+id/idTextNumberMarker"
                app:layout_constraintTop_toTopOf="@+id/idTextNumberMarker" />

            <EditText
                android:id="@+id/editTextTitleMarker"
                style="@style/TextAppearance.Body2Menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/title"
                android:minHeight="48dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNumberMarker" />

            <EditText
                android:id="@+id/editTextDescriptionMarker"
                style="@style/TextAppearance.Body2Menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/description"
                android:minHeight="48dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTitleMarker" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSaveMarker"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:background="@color/accent2"
                android:text="@string/save"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDescriptionMarker" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>
